--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-header *ngIf="isUserLoggedIn"></app-header>
+<app-header *ngIf="isUserLoggedIn && isUserInMeetList"></app-header>
 <router-outlet></router-outlet>
