--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -23,4 +23,4 @@
   </div> -->
 
 <!-- </nav> -->
-<button [routerLink]="['/meetings/schedule-new-meeting']">Schedule New Meeting</button>
+<button class="mb-10" [routerLink]="['/meetings/schedule-new-meeting']">Schedule New Meeting</button>
