--- a/src/scss/settings/_custom-variables.scss
+++ b/src/scss/settings/_custom-variables.scss
@@ -272,7 +272,7 @@ $embed-responsive-aspect-ratios: join(
 
 // stylelint-disable value-keyword-case
 $font-family-sans-serif:      'Open Sans', sans-serif; // change
-$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace ;
+//$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace ;
 $font-family-base:            $font-family-sans-serif ;
 // stylelint-enable value-keyword-case
 
