--- a/src/scss/settings/_theme-variables.scss
+++ b/src/scss/settings/_theme-variables.scss
@@ -27,6 +27,12 @@
         8) menu-icon-color
             List of color for sidebar menu items icon colors
 */
+
+* {
+    font-family: sans-serif !important;
+}
+
+
 $header-height: 50px;
 // $Menu-width: 250px;
 $Menu-width: 230px;
