--- a/src/app/meetings/components/schedule-new-meeting/schedule-new-meeting.component.scss
+++ b/src/app/meetings/components/schedule-new-meeting/schedule-new-meeting.component.scss
@@ -33,7 +33,8 @@ input[type=text], select, textarea{
   }
   
   /* Style the submit button */
-button[type=submit ] {
+
+  button {
     background-color: #04AA6D;
     //adding-top: 5vh;;
     color: white;
@@ -41,17 +42,8 @@ button[type=submit ] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    float: left;
-  }
-  button{
-    background-color: #04AA6D;
-    //adding-top: 5vh;;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
+    margin-top: 10px;
+    ////float: right;
   }
   /* Style the container */
   .container {
@@ -90,5 +82,6 @@ button[type=submit ] {
   }
 
   .error{
-      color: indianred;
-  }
+    color: indianred;
+    margin-bottom: 10px;
+}
