--- a/src/app/user-management/components/login/login.component.html
+++ b/src/app/user-management/components/login/login.component.html
@@ -3,10 +3,10 @@
     <div class="h-100 d-md-flex align-items-center auth-side-img">
       <div class="col-sm-10 auth-content w-auto">
         <!-- <img src="assets/images/auth/auth-logo.png" alt="" class="img-fluid" /> -->
-        <h1 class="text-white my-4">Welcome Back!</h1>
+        <!-- <h1 class="text-white my-4">Welcome Back!</h1>
         <h4 class="text-white font-weight-normal">
           Signin to your account , if you dont have an account please SignUp!
-        </h4>
+        </h4> -->
       </div>
     </div>
     <div class="auth-side-form">
@@ -17,7 +17,7 @@
             alt=""
             class="img-fluid mb-4 d-block d-xl-none d-lg-none"
           /> -->
-          <h3 class="mb-4 f-w-400">Signin</h3>
+          <h3 class="mb-4 f-w-400">Welcome! SignIn to your acount , if you dont have an account please SignUp!</h3>
           <div class="input-group mb-3">
             <input
               type="email"
@@ -37,14 +37,16 @@
           <div *ngIf="error" class="error">
             Please enter valid credentials
           </div>
-          <button class="btn btn-block btn-primary mb-0" type="submit">Signin</button>
-          <button
-            class="btn btn-block btn-primary mb-0"
-            [routerLink]="['/user/sign-up']"
-            routerLinkActive="router-link-active"
-          >
-            Signup
-          </button>
+          <div class="button-wrapper">
+            <button class="btn btn-block btn-primary mb-0" type="submit">Signin</button>
+            <button
+              class="btn btn-block btn-primary mb-0"
+              [routerLink]="['/user/sign-up']"
+              routerLinkActive="router-link-active"
+            >
+              Signup
+            </button>
+          </div>
         </div>
       </form>
     </div>
