--- a/src/app/user-management/components/sign-up/sign-up.component.html
+++ b/src/app/user-management/components/sign-up/sign-up.component.html
@@ -2,10 +2,10 @@
   <div class="flex-grow-1">
     <div class="h-100 d-md-flex align-items-center auth-side-img">
       <div class="col-sm-10 auth-content w-auto">
-        <h1 class="text-white my-4">Welcome you!</h1>
+        <!-- <h1 class="text-white my-4">Welcome you!</h1>
         <h4 class="text-white font-weight-normal">
           Signup to your account 
-        </h4>
+        </h4> -->
       </div>
     </div>
     <div class="auth-side-form">
@@ -59,7 +59,7 @@
             />
           </div>
           <div *ngIf="!isSubmit" class="error">
-            Please fill the form 
+            {{ErrorLine}}
           </div>
           <button class="btn btn-primary btn-block mb-4" type="submit">Sign up</button>
           <div class="text-center">
