--- a/src/app/user-management/components/sign-up/sign-up.component.scss
+++ b/src/app/user-management/components/sign-up/sign-up.component.scss
@@ -85,6 +85,14 @@
       padding: 15px;
       z-index: 5;
 
+      h4 {
+        margin-top: 0;
+      }
+
+    .input-group {
+        margin-bottom: 16px;
+    }
+
       &:not(.container) {
           width: 400px;
 
@@ -116,7 +124,7 @@
       display: inline-flex;
       align-items: center;
       left: auto;
-      float: right;
+      //float: right;
 
       > * {
           position: relative;
@@ -190,7 +198,7 @@
   background-position: center;
 
   .auth-content {
-      padding: 70px 40px;
+      padding: 40px 40px;
   }
 }
 /* image varient End */
@@ -239,7 +247,7 @@ input[type=text], select, textarea{
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    //float: right;
+    ////float: right;
   }
   
   /* Style the container */
@@ -249,21 +257,21 @@ input[type=text], select, textarea{
     padding: 20px;
   }
   
-  /* Floating column for labels: 25% width */
+  /* //floating column for labels: 25% width */
   .col-25 {
-    float: left;
+    //float: left;
     width: 25%;
     margin-top: 6px;
   }
   
-  /* Floating column for inputs: 75% width */
+  /* //floating column for inputs: 75% width */
   .col-75 {
-    float: left;
+    //float: left;
     width: 75%;
     margin-top: 6px;
   }
   
-  /* Clear floats after the columns */
+  /* Clear //floats after the columns */
   .row:after {
     content: "";
     display: table;
@@ -280,4 +288,5 @@ input[type=text], select, textarea{
 
   .error{
       color: indianred;
+      margin-bottom: 10px;
   }
